[tool.poetry]
name = "pm-tests"
version = "0.1.0"
description = "\"Base project\""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.1"
requests = "^2.25.1"
jsonschema = "^3.2.0"
pytest-bdd = "^4.0.2"
jsonpath = "^0.82"
allure-pytest = "^2.8.29"
pytest-github-actions-annotate-failures = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "api_service: marks tests for api testing')",
    "jsonValidation: marks tests with jsonschema validation",
    "duck's_search: marks tests with duckducks api search",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]
